@@ -5,6 +5,7 @@
   * Minor graphical tag changes on calendar
   * Stickies can now have a due time and duration
   * Sticky creation emails now include an ICS event file if a due date time is set
+  * Calendar now sorts stickies by project, then by tags, then by due date time
 
 * Bug Fix
   * Email setting checkboxes for project notifications are no longer incorrectly disabled
